tests/lean/bad_error4.lean
structure foo :=
(f: unit -> unit)

definition bar : foo :=
{ f := λ a b, _ }
